# workflow_rust

./: Cargo.toml  DEPENDENCY_UPDATE_FINAL_SUMMARY.md  DEPENDENCY_UPDATE_REPORT.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.yml  prometheus.yml  workflow_rules.yml
.github/workflows/: ci.yml  deploy.yml
k8s/: deployment.yaml
workflow/: Cargo.toml  README.md
workflow/benches/: performance_benchmarks.rs
workflow/docs/: API.md  ARCHITECTURE.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  FINAL_PROJECT_STATUS.md  PERFORMANCE.md  PROJECT_RESTRUCTURE_PLAN.md  README.md  TEMPORAL_BASED_DESIGN.md  TEMPORAL_REDESIGN_COMPLETION_REPORT.md  TEMPORAL_RESTRUCTURE_SUMMARY.md  WORK_COMPLETION_REPORT.md  observability.md
workflow/docs/deprecated/: MIGRATION_SUMMARY.md
workflow/docs/deprecated/old_comparisons/: TEMPORAL_ALIGNMENT_ROADMAP.md  TEMPORAL_DOCS_INDEX.md  TEMPORAL_FRAMEWORK_COMPARISON.md  TEMPORAL_INTEGRATION_SUMMARY.md  TEMPORAL_QUICK_REFERENCE.md
workflow/docs/temporal_rust/: 00_MASTER_INDEX.md  01_concept_mapping.md  02_architecture.md  03_type_system.md  04_workflow_definition.md  05_activity_definition.md  06_signals_and_queries.md  07_lifecycle.md  08_retry_and_timeout.md  09_versioning.md  10_testing.md  11_worker.md  12_persistence.md  13_client_api.md  14_observability.md  15_deployment.md  16_best_practices.md  17_migration_guide.md  18_basic_examples.md  19_advanced_examples.md  20_data_pipeline.md  21_batch_processing.md  22_microservices.md  23_scheduled_tasks.md  LATEST_PROGRESS_2025_10_26.md  PROGRESS_100_PERCENT.md  PROGRESS_78_PERCENT.md  PROGRESS_87_PERCENT.md  PROGRESS_FINAL_2025_10_26.md  PROGRESS_REPORT.md  SESSION_3_COMPLETE.md  SESSION_4_COMPLETE.md  SESSION_5_COMPLETE.md  SESSION_6_COMPLETE.md  SESSION_COMPLETE_2025_10_26.md  STATUS_UPDATE_2025_10_26.md  WORK_SUMMARY_2025_10_26.md
workflow/docs/temporal_rust/examples/: ecommerce_order_go.md  rust_go_comparison.md
workflow/examples/: ecommerce_order.rs  rust190_examples.rs  simple_demo.rs
workflow/src/: engine.rs  http.rs  lib.rs  main.rs  persistence.rs
workflow/src/examples/: advanced_examples.rs  basic_workflow.rs  middleware_examples.rs  mod.rs  pattern_examples.rs  rust190_examples.rs  simple_example.rs
workflow/src/middleware/: mod.rs
workflow/src/patterns/: mod.rs
workflow/src/patterns/behavioral/: mod.rs
workflow/src/patterns/concurrent/: mod.rs
workflow/src/patterns/creational/: builder.rs  factory.rs  mod.rs  prototype.rs  singleton.rs
workflow/src/patterns/structural/: mod.rs
workflow/src/rust190/: async_features.rs  const_features.rs  features.rs  mod.rs  performance.rs  session_types.rs  stable_apis.rs
workflow/src/temporal/: activity.rs  client.rs  error.rs  event.rs  mod.rs  query.rs  signal.rs  storage.rs  types.rs  worker.rs  workflow.rs
workflow/tests/: integration_tests.rs
