[package]
name = "workflow"
version = "1.90.0"
edition = "2024"
resolver = "3"
authors = ["Rust Workflow Team"]
description = "Advanced workflow system aligned with Rust 1.90 features, international standards, and mature open-source frameworks"
license = "MIT"
repository = "https://github.com/rust-lang/workflow"
keywords = ["workflow", "rust", "patterns", "middleware", "async", "rust190", "temporal", "cadence", "ferrite"]
categories = ["asynchronous", "concurrency", "web-programming", "workflow"]
rust-version = "1.90"

[dependencies]
# 核心依赖 / Core Dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# 异步运行时 / Async Runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# 并发和同步 / Concurrency and Synchronization
parking_lot = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
arc-swap = "1.7.1"
once_cell = "1.21.3"

# 会话类型和并发通信 / Session Types and Concurrent Communication
# ferrite = { version = "0.1.0", optional = true }  # 暂时注释掉，避免系统依赖问题  # Rust 会话类型嵌入库
tokio-stream = { workspace = true }
async-stream = { workspace = true }

# 序列化和数据 / Serialization and Data
uuid = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }

# 网络和通信 / Network and Communication
reqwest = { workspace = true, features = ["json", "stream"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
axum = { workspace = true }

# 观测与追踪 / Observability and Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

# 工作流引擎对标 / Workflow Engine Benchmarking
# 对标 Temporal、Cadence 等成熟框架 / Benchmarking against mature frameworks like Temporal, Cadence
# temporal-sdk = { version = "0.1", optional = true }  # 暂时注释，因为该包在 crates.io 上不可用
# cadence = { version = "0.1", optional = true }      # 暂时注释，因为该包在 crates.io 上不可用

# 数据库支持 / Database Support (可选特性)
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], default-features = false, optional = true }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"], optional = true }

# 监控和日志 / Monitoring and Logging
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# 配置管理 / Configuration Management
config = { workspace = true }
# clap: 简单易用、高效且功能完整的命令行参数解析器
clap = { version = "4.5.50", features = ["derive", "env"] }

# 测试支持 / Testing Support
[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
proptest = { workspace = true }
mockall = { workspace = true }

[features]
default = ["middleware", "patterns", "rust190", "international_standards"]
full = ["middleware", "patterns", "rust190", "monitoring", "persistence", "database", "international_standards", "framework_benchmarking", "async_streams"]
middleware = []
patterns = []
rust190 = []  # Rust 1.90 特性支持
session_types = []  # 会话类型支持
async_streams = []  # 异步流处理增强
monitoring = []
persistence = []
database = ["redis"]
international_standards = []
framework_benchmarking = []  # 暂时移除 temporal-sdk 和 cadence 依赖

[[bench]]
name = "performance_benchmarks"
path = "benches/performance_benchmarks.rs"
harness = false